--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bootstrap": "^5.3.3",
+    "bootstrap-vue": "^2.23.1",
+    "bootstrap-vue-3": "^0.5.1",
+    "chart.js": "^4.4.7",
     "vue": "^3.2.25",
+    "vue-chartjs": "^5.3.2",
     "vue-router": "^4.0.12"
   },
   "devDependencies": {
