--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "chart.js": "^4.4.7",
     "vue": "^3.2.25",
     "vue-chartjs": "^5.3.2",
-    "vue-router": "^4.0.12"
+    "vue-router": "^4.0.12",
+    "vue-toast-notification": "^3.1.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.2.0",
