--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "vue": "^3.2.25",
     "vue-chartjs": "^5.3.2",
     "vue-router": "^4.0.12",
-    "vue-toast-notification": "^3.1.3"
+    "vue-toast-notification": "^3.1.3",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.2.0",
