--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
     "bootstrap-vue": "^2.23.1",
     "bootstrap-vue-3": "^0.5.1",
     "chart.js": "^4.4.7",
+    "jspdf": "^2.5.2",
     "vue": "^3.2.25",
     "vue-chartjs": "^5.3.2",
+    "vue-good-table": "^2.21.11",
     "vue-router": "^4.0.12",
     "vue-toast-notification": "^3.1.3",
-    "vuex-persistedstate": "^4.1.0"
+    "vuetify": "^3.7.7",
+    "vuex-persistedstate": "^4.1.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.2.0",
