--- a/package.json
+++ b/package.json
@@ -8,23 +8,34 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ag-grid-community/client-side-row-model": "^32.3.3",
+    "@ag-grid-community/styles": "^32.3.3",
+    "@ag-grid-community/vue3": "^32.3.3",
+    "ag-grid-vue3": "^31.3.4",
+    "apexcharts": "^4.4.0",
+    "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "bootstrap-vue": "^2.23.1",
     "bootstrap-vue-3": "^0.5.1",
     "chart.js": "^4.4.7",
+    "chartjs-adapter-date-fns": "^3.0.0",
+    "jquery": "^3.7.1",
     "jspdf": "^2.5.2",
+    "jszip": "^3.10.1",
+    "pdfmake": "^0.2.18",
+    "sass-loader": "^16.0.4",
     "vue": "^3.2.25",
     "vue-chartjs": "^5.3.2",
-    "vue-good-table": "^2.21.11",
     "vue-router": "^4.0.12",
-    "vue-toast-notification": "^3.1.3",
+    "vue-toastification": "^2.0.0-rc.5",
+    "vue3-apexcharts": "^1.8.0",
     "vuetify": "^3.7.7",
     "vuex-persistedstate": "^4.1.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.2.0",
-    "sass": "^1.49.8",
+    "sass": "^1.83.4",
     "vite": "^2.8.0"
   }
 }
